<!--
  ~ Copyright (c) 2022 Ascendit Sp. z o. o.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see https://www.gnu.org/licenses/
  ~
  -->

<resources>
    <string name="app_name">OneTimeAlarm</string>
    <string name="app_long_name">One time alarm</string>
    <string name="about_thank_you">Thank you for using my app</string>
    <string name="about_contact_me">Contact me</string>
    <string name="about_find_me">Find me on</string>
    <string name="version">version</string>
    <string name="version_info">OneTimeAlarm</string>
    <string name="mail_subject">OTA: Subject</string>
    <string name="website_url">https://www.matdlu.com</string>
    <string name="mail_address">support@ascendit.pl</string>
    <string name="linkedin_url">https://www.linkedin.com/in/mateuszdlubak</string>
    <string name="github_url">https://github.com/matdlu</string>
    <string name="btAdd_contentDesc">Add alarm</string>
    <string name="tvNoAlarms_text">To add alarm press the button in the bottom right corner.</string>
    <string name="alarm_item_time_example">19:00</string>
    <string name="alarm_item_day_example">Tomorrow</string>
    <string name="alarm_item_name_example">Example name</string>
    <string name="dialog_alarm_time_hint">Time</string>
    <string name="dialog_alarm_day_hint">Day</string>
    <string name="dialog_alarm_name_hint">Name</string>
    <string name="stop_alarm_turn_off_alarm">Turn off alarm</string>
    <string name="choose_ringtone">Choose ringtone</string>
    <string name="alarm_sound">Alarm sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="notification_channel_name">Alarms</string>
    <string name="notification_channel_desc">Receive alarms</string>
    <string name="dialog_edit_title">Edit alarm</string>
    <string name="dialog_add_title">Add alarm</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="today">Today</string>
    <string name="tommorow">Tomorrow</string>
    <string name="dialog_delete">Delete</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="clock12">12 hour clock</string>
</resources>
